export interface Staff {
    licenseNumber: string;
    firstName: string;
    lastName: string;
    phone: string;
    email: string;
    address: string;
    function: string;
    specializationId:string;
}

