@startuml

skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

entity Staff {}
entity Doctor {}
entity MedicalCondition {}
entity MedicalRecord {}

Doctor ---> "1" Staff : is a
MedicalRecord --> "0..*" MedicalCondition : contains
Doctor --> "0..*" MedicalRecord : manages

@enduml

